# kengine

./: .gitignore  .gitmodules  CLAUDE.md  DOCUMENTATION.md  README.md  TODO.md  build.gradle.kts  build_log.txt  gradle.properties  kengine-modularization-guide.md  settings.gradle.kts
.github/workflows/: build.yml  publish.yml
boxxle/: README.md  build.gradle.kts
boxxle-playdate/: README.md
buildSrc/: .gitignore  build.gradle.kts
docs/: ARCHITECTURE.md  GAMEPAD_FIXES.md  KENGINE_3D_PLAN.md  NINTENDO_SWITCH.md  WASM.md  kengine-modularization-guide.md
games/antfarm/: NOTES.md  README.md  analyze.md  build.gradle.kts
games/boxxle/: README.md  build.gradle.kts
games/chat-demo/: README.md  build.gradle.kts
games/demo/: build.gradle.kts
games/hextris/: CHANGES.md  (+5 more)
gradle/: libs.versions.toml
helloworld/: README.md  build.gradle.kts
kengine/: build.gradle.kts
kengine-3d/: build.gradle.kts
kengine-3d-importer/: README.md  build.gradle.kts
kengine-3d-model-viewer/: README.md  build.gradle.kts
kengine-3d-ui/: README.md  build.gradle.kts
kengine-network/: build.gradle.kts
kengine-physics/: build.gradle.kts
kengine-playdate/: NOTES.md  README.md  build.gradle.kts  build_pdx.sh
kengine-reactive/: build.gradle.kts
kengine-sound/: build.gradle.kts
kengine-test/: README.md  build.gradle.kts
kengine/src/nativeMain/cpp/: CMakeLists.txt  box2d_wrapper.cpp
kengine/src/nativeMain/cpp/include/: box2d_wrapper.h
packaging/: kengine.icns
pickleball/: README.md  build.gradle.kts
sdl3/: README.md  build_sdl.sh
tools/: extract_glb_animations.py
(+687 files in other folders)
